Remove unused fields in BillableUsageConsumerTest